templates/ingress/axric-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: axric-ingress
  namespace: axric
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: axrique.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: axric-fe
            port:
              number: 80
  tls:
  - hosts:
    - axrique.com
    secretName: axric-fe-tls
